--- a/src/main/resources/templates/modules/produce_schedule_detail.html
+++ b/src/main/resources/templates/modules/produce_schedule_detail.html
@@ -7,19 +7,20 @@
             <tbody>
                 <tr>
                     <td colspan="3"><span class="bold">生产单号：</span><span th:text="${schedule.code}"></span></td>
-                    <td colspan="2"><span class="bold">交货日期：</span><span th:text="${deliveryDate}"></span></td>
+                    <td colspan="3"><span class="bold">交货日期：</span><span th:text="${deliveryDate}"></span></td>
                 </tr>
                 <tr>
                     <td colspan="3"><span class="bold">计划生产日期：</span><span th:text="${startDate}"></span></td>
-                    <td colspan="2"><a th:href="${'/produce_bom/schedule/' + schedule.id + '/download'}">下载BOM</a></td>
+                    <td colspan="3"><a th:href="${'/produce_bom/schedule/' + schedule.id + '/download'}">下载BOM</a></td>
                 </tr>
                 <tr>
-                    <td colspan="5"><span class="bold">备注：</span><span th:text="${remark}"></span></td>
+                    <td colspan="6"><span class="bold">备注：</span><span th:text="${remark}"></span></td>
                 </tr>
                 <tr>
                     <td class="bold">产成品名称</td>
                     <td class="bold">规格 & 特征值</td>
-                    <td class="bold">数量</td>
+                    <td class="bold">需求数量</td>
+                    <td class="bold">库存数量</td>
                     <td class="bold">单位</td>
                     <td class="bold">备注</td>
                 </tr>
@@ -27,16 +28,18 @@
                     <td th:text="${item.materialName}"></td>
                     <td><div th:text="${itemMaterialSpecification}" style="max-width: 240px; white-space: pre-wrap;"></div></td>
                     <td th:text="${scheduleQuantity}"></td>
+                    <td></td>
                     <td th:text="${item.unitText}"></td>
                     <td th:text="${item.remark}"></td>
                 </tr>
                 <tr>
                     <td class="bold" colspan="5">BOM</td>
                 </tr>
-                <tr th:each="row : ${data}">
+                <tr th:each="row : ${data}" class="bom">
                     <td th:text="${row[0]}"></td>
                     <td><div th:text="${row[1]}" style="max-width: 240px; white-space: pre-wrap;"></div></td>
                     <td th:text="${row[2]}"></td>
+                    <td th:text="${row[7]}"></td>
                     <td th:text="${row[3]}"></td>
                     <td th:text="${row[4]}"></td>
                 </tr>
@@ -51,5 +54,14 @@
             </tbody>
         </table>
     </div>
+<script>
+    $('.bom').each(function () {
+        let needQuantity = parseFloat($(this).find('td:nth-child(3)').text());
+        let stockQuantity = parseFloat($(this).find('td:nth-child(4)').text());
+        if (needQuantity > stockQuantity) {
+            $(this).find('td:nth-child(4)').css('background', '#f86c6b').css('color', '#fff')
+        }
+    })
+</script>
 </body>
 </html>
