--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -1117,6 +1117,8 @@
 
                 $receiveContactInfo.autofill(firstContactInfo)
             }
+
+            $editableTable.editableTablePlus('readonly', readonly)
         }
 
         function calcAmount($tr) {
