--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -119,6 +119,12 @@
                 <div class="tab-pane active" id="tab-1" role="tabpanel" th:if="${po.id != null}">
                     <form id="receiveContactInfo">
                         <div class="form-group row">
+                            <label class="col-sm-1 col-form-label">直发客户</label>
+                            <div class="col-sm-4">
+                                <input class="form-control" type="text" name="receiveContactCompany">
+                            </div>
+                        </div>
+                        <div class="form-group row">
                             <label class="col-sm-1 col-form-label">联系人</label>
                             <div class="col-sm-4">
                                 <input class="form-control" type="text" name="receiveContactPerson">
@@ -278,6 +284,7 @@
                     fromActiveRow.$tr[0].receiveContactInfo = $receiveContactInfo.form2json({allowEmptyMultiVal:true})
                 }
                 $receiveContactInfo.autofill({...{
+                        'receiveContactCompany': '',
                         'receiveContactPerson': '',
                         'receiveContactNumber': '',
                         'receiveContactMail': '',
@@ -554,13 +561,14 @@
 
                 // 收货地址
                 item['contactInfo'] = (trDom.receiveContactInfo && Object.values(trDom.receiveContactInfo).filter(v => v).length === 0) ? null : {
+                    "contactSubject": trDom.receiveContactInfo.receiveContactCompany,
                     "contactPerson": trDom.receiveContactInfo.receiveContactPerson,
                     "contactNumber": trDom.receiveContactInfo.receiveContactNumber,
                     "contactMail": trDom.receiveContactInfo.receiveContactMail,
                     "address": trDom.receiveContactInfo.address
                 }
 
-                if (item.purchaseSend && (!item.contactInfo || !item.contactInfo.address || !item.contactInfo.contactPerson || !item.contactInfo.contactNumber)) {
+                if (item.purchaseSend && (!item.contactInfo || !item.contactInfo.contactSubject || !item.contactInfo.address || !item.contactInfo.contactPerson || !item.contactInfo.contactNumber)) {
                     toastr.error('采购直发客户收货信息不能为空！')
                     return;
                 }
@@ -625,6 +633,7 @@
                 for(let i = 0; i < itemList.length; i++) {
                     if (itemList[i].contactInfo) {
                         $trs[i].receiveContactInfo = {
+                            "receiveContactCompany": itemList[i].contactInfo['contactSubject'],
                             "receiveContactPerson": itemList[i].contactInfo['contactPerson'],
                             "receiveContactNumber": itemList[i].contactInfo['contactNumber'],
                             "receiveContactMail": itemList[i].contactInfo['contactMail'],
