chore: 销售成品库出库

--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -296,7 +296,7 @@
             // 库房自动选择
             if (type.value === 'OUTBOUND' && select.value === 'SO') {
                 // 成品库
-                // $('#plantId').val('726159086739001344')
+                $('#plantId').val('726159086739001344')
                 // 仓库从材料库房出货
             } else {
                 $('#plantId').val('719893335619162112')
