--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2" for="plantId">库房</label>
-                        <sp:select id="plantId" name="plantId" key="core_plant" class="form-control" hideAllItem/>
+                        <sp:select id="plantId" name="plantId" key="core_plant" class="form-control" hideAllItem auth/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2" for="operatorId">操作人</label>
