--- a/src/main/resources/templates/modules/produce_schedule_detail.html
+++ b/src/main/resources/templates/modules/produce_schedule_detail.html
@@ -41,7 +41,7 @@
                     <td th:text="${row[2]}"></td>
                     <td th:text="${row[7]}"></td>
                     <td th:text="${row[3]}"></td>
-                    <td th:text="${row[4]}"></td>
+                    <td th:text="${row[4]}" style="max-width: 200px; white-space: pre-wrap;"></td>
                 </tr>
                 <th:block th:if="${item.attachmentList.size() > 0}">
                     <tr>
@@ -60,6 +60,14 @@
         let stockQuantity = parseFloat($(this).find('td:nth-child(4)').text());
         if (needQuantity > stockQuantity) {
             $(this).find('td:nth-child(4)').css('background', '#f86c6b').css('color', '#fff')
+        }
+
+        if ($(this).find('td:nth-child(1)').text() === '配件') {
+            if (!$(this).find('td:last-child').text().trim()) {
+                $(this).remove()
+            } else {
+                $(this).find('td:nth-child(4)').css('background', '#fff').text("")
+            }
         }
     })
 </script>
