--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -552,8 +552,12 @@
             characteristic.getCharacteristicParams($editableTable, params['itemList'])
 
             // 保存当前 active 到 DOM 中
-            let activeTr = $editableTable.editableTablePlus('getActiveRowValue').$tr[0];
-            activeTr.receiveContactInfo = $receiveContactInfo.form2json({allowEmptyMultiVal:true})
+            let activeRowValue = $editableTable.editableTablePlus('getActiveRowValue')
+            if (activeRowValue) {
+                let activeTr = activeRowValue.$tr[0];
+                activeTr.receiveContactInfo = $receiveContactInfo.form2json({allowEmptyMultiVal:true})
+            }
+
             let addressMapping = {}
             for (let index in params['itemList']) {
                 let item = params['itemList'][index]
