chore:采购申请完善

--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -451,6 +451,10 @@
                     name: "referenceId2",
                 },
                 {
+                    type: "hidden",
+                    name: "produceOrderId",
+                },
+                {
                     type: isAdd ? "hidden": "checkbox",
                     title: "收货完成",
                     name: "complete",
