--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -5,6 +5,7 @@
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
     <link rel="stylesheet" th:href="@{/css/edit-table.css}">
+    <link rel="stylesheet" th:href="@{/plugins/multiple-select/multiple-select.min.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
     <style>
         .operator-bar {
@@ -48,7 +49,7 @@
                     <input id="code" type="hidden" name="code" th:value="${po.code == null ? '1' : po.code}">
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="partnerId">供应商</label>
-                        <sp:select  id="partnerId" name="partnerId" key="core_partner_vendor" th:value="${po.partnerId}" class="form-control" emptyItemText required onchange="changeVendor(this)" th:attr="disabled=${po.id != null}"/>
+                        <sp:select  id="partnerId" name="partnerId" key="core_partner_vendor" th:value="${po.partnerId}" class="form-control" emptyItemText required/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="contactPerson">联系人</label>
@@ -241,6 +242,7 @@
     <script th:src="@{/plugins/bootstrap-datepicker/js/bootstrap-datepicker.zh-CN.min.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/jquery.form2json.js}"></script>
     <script type="text/javascript" th:src="@{/js/table/jquery.formautofill.min.js}"></script>
+    <script th:src="@{/plugins/multiple-select/multiple-select.min.js}"></script>
     <script th:src="@{/js/jquery.dialog.js}"></script>
 
     <script th:src="@{/editable-table/editable-table.js}"></script>
@@ -264,6 +266,10 @@
         let formItem = document.getElementById('form-item');
         let $receiveContactInfo = $('#receiveContactInfo')
         let $soInfo = $('#soInfo')
+
+        $('#partnerId').multipleSelect({
+            filter: true
+        })
 
         let value = [
             // {
@@ -523,11 +529,11 @@
             $('#totalAmount').text(totalAmount)
         }
 
-        function changeVendor() {
-            if ($editableTable.editableTablePlus('getValue').length && confirm('切换供应商物料数据将会被清空， 要继续吗？')) {
-                $editableTable.editableTablePlus('clear')
-            }
-        }
+        // function changeVendor() {
+        //     if ($editableTable.editableTablePlus('getValue').length && confirm('切换供应商物料数据将会被清空， 要继续吗？')) {
+        //         $editableTable.editableTablePlus('clear')
+        //     }
+        // }
 
         function valid() {
             var formHeaderValidity = formHeader.checkValidity()
