fix: 采购订单可以下单所有物料

--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -323,7 +323,8 @@
                     width: 100,
                     required: true,
                     mode: 'multiple', // 多选,
-                    reportId: '718618818011729920',
+                    // reportId: '718618818011729920',
+                    reportId: '697147523487240192',
                     // params: {categoryId: "717389543182962688"},
                     // beforeShow: function ($tr, context) {
                     //     let partnerId = $('#partnerId').val()
